// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:service 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-required"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  模板
                </span>
              </span>
              <span
                class="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="cxd-SelectControl cxd-Form-control is-inline"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="cxd-Select"
              role="combobox"
              tabindex="0"
            >
              <div
                class="cxd-Select-valueWrap"
              >
                <div
                  class="cxd-Select-value"
                >
                  模板1
                </div>
              </div>
              <span
                class="cxd-Select-arrow"
              >
                <icon-mock
                  classname="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="cxd-Service m-t"
        >
          <div
            class="cxd-Form-item cxd-Form-item--normal is-required"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    动态字段1
                  </span>
                </span>
                <span
                  class="cxd-Form-star"
                >
                  *
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="dy_1"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="cxd-Form-item cxd-Form-item--normal"
            data-role="form-item"
          >
            <label
              class="cxd-Form-label"
            >
              <span>
                <span
                  class="cxd-TplField"
                >
                  <span>
                    动态字段2
                  </span>
                </span>
              </span>
            </label>
            <div
              class="cxd-Form-control cxd-TextControl"
            >
              <div
                class="cxd-TextControl-input"
              >
                <input
                  autocomplete="off"
                  class=""
                  name="dy_2"
                  placeholder=""
                  size="10"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`form:service:remoteData 1`] = `
<div>
  <form
    class="cxd-Form cxd-Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="cxd-Service"
    >
      <div
        class="cxd-Form-item cxd-Form-item--normal"
        data-role="form-item"
      >
        <div
          class="cxd-Form-control cxd-TextControl"
        >
          <div
            class="cxd-TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-a"
              placeholder=""
              size="10"
              type="text"
              value="123"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Form-item cxd-Form-item--normal"
      data-role="form-item"
    >
      <button
        class="cxd-Button cxd-Button--default cxd-Button--size-default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`form:service:remoteSchmea+data 1`] = `
<div>
  <form
    class="cxd-Form cxd-Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="cxd-Service"
    >
      <div
        class="cxd-Form-item cxd-Form-item--normal"
        data-role="form-item"
      >
        <div
          class="cxd-Form-control cxd-TextControl"
        >
          <div
            class="cxd-TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-a"
              placeholder=""
              size="10"
              type="text"
              value="123"
            />
          </div>
        </div>
      </div>
      <div
        class="cxd-Form-item cxd-Form-item--normal"
        data-role="form-item"
      >
        <div
          class="cxd-Form-control cxd-TextControl"
        >
          <div
            class="cxd-TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-b"
              placeholder=""
              size="10"
              type="text"
              value="344"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Form-item cxd-Form-item--normal"
      data-role="form-item"
    >
      <button
        class="cxd-Button cxd-Button--default cxd-Button--size-default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`form:service:super-remoteData 1`] = `
<div>
  <form
    class="cxd-Form cxd-Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="cxd-Service"
    >
      <div
        class="cxd-Form-item cxd-Form-item--normal"
        data-role="form-item"
      >
        <div
          class="cxd-Form-control cxd-TextControl"
        >
          <div
            class="cxd-TextControl-input"
          >
            <input
              autocomplete="off"
              class=""
              name="child-a"
              placeholder=""
              size="10"
              type="text"
              value="123"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Form-item cxd-Form-item--normal"
      data-role="form-item"
    >
      <button
        class="cxd-Button cxd-Button--default cxd-Button--size-default"
        type="submit"
      >
        <span>
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;
